# jedi-library-python

./: .gitignore  CLAUDE.md  CONTEXTO.md  README.md  pyproject.toml
.specs/: 20260325-create-jediLogs-python.md
91-diario/: 20260612-acao-perigosa-remove-python-legado.sh  20260612-implementacao-onda1-6-modulos.md  20260613-push-producao-onda1.md  20260617-planejamento-jedi-ai-client-pattern.md  20260617-redesign-jedi-ai-client-pattern.md  20260617-verificacao-push-final.md  20260618-paridade-jediai-gas.md
docs/11-tarefas/: 20260612-jedi-assets.md  20260612-jedi-audit.md  20260612-jedi-datetime.md  20260612-jedi-db.md  20260612-jedi-log-expansao.md  20260612-jedi-log.md  20260612-jedi-slug.md  20260612-jedi-status-flow.md  20260612-plano-jedi-assets.md  20260612-plano-jedi-datetime.md  20260612-plano-jedi-db.md  20260612-plano-jedi-log.md  20260612-plano-jedi-slug.md  20260612-plano-jedi-status-flow.md  20260612-spec-jedi-assets.md  20260612-spec-jedi-datetime.md  20260612-spec-jedi-db.md  20260612-spec-jedi-log.md  20260612-spec-jedi-slug.md  20260612-spec-jedi-status-flow.md  20260617-plano-jedi-ai-client-pattern.md  20260617-plano-response-schema-data-extract.md  20260617-spec-jedi-ai-client-pattern.md  20260618-bug-data-extract-pdf-role-faltando.md  20260618-plano-paridade-jediai-gas.md  (+1 more)
jedi_library/: __init__.py  ai.py  assets.py  datetime_utils.py  db.py  log.py  slug.py  status_flow.py  utils.py
src/python/: jedi_log.py
tests/: test_ai.py  test_assets.py  test_datetime_utils.py  test_db.py  test_log.py  test_slug.py  test_status_flow.py  test_utils.py
(+18 files in other folders)
