[project]
name = "jedi-library"
version = "0.3.0"
description = "Utilities for Jedi Labs Python projects"
requires-python = ">=3.12,<3.13"
dependencies = [
    "google-auth>=2.0",
    "google-genai>=1.0",
    "sqlparse>=0.5,<1.0",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[dependency-groups]
dev = ["pytest>=8.0"]
